--- a/package.json
+++ b/package.json
@@ -10,7 +10,10 @@
     "react": "^17.0.1",
     "react-bootstrap": "^1.5.2",
     "react-dom": "^17.0.1",
+    "react-draggable": "^4.4.3",
+    "react-grid-layout": "^1.2.4",
     "react-scripts": "4.0.3",
+    "reactjs-popup": "^2.0.4",
     "web-vitals": "^1.1.0"
   },
   "scripts": {
