--- a/frontend/Dockerfile
+++ b/frontend/Dockerfile
@@ -17,7 +17,7 @@ COPY package-lock.json /app/package-lock.json
 RUN npm install
 RUN npm update
 RUN npm install react-scripts -g
-RUN npm install semantic-ui-react semantic-ui-css
+RUN npm install @material-ui/core
 
 # Add React app to working directory
 ADD . /app
