--- a/Dockerfile.api
+++ b/Dockerfile.api
@@ -1,17 +1,11 @@
-# For more information, please refer to https://aka.ms/vscode-docker-python
+# This Dockerfile builds the API only.
+
 FROM python:3.8
+WORKDIR /app
+
+COPY api ./
+RUN pip install -r ./requirements.txt
+ENV FLASK_ENV production
 
 EXPOSE 5000
-
-# Keeps Python from generating .pyc files in the container
-ENV PYTHONDONTWRITEBYTECODE 1
-
-# Turns off buffering for easier container logging
-ENV PYTHONUNBUFFERED 1
-
-# Install pip requirements
-ADD requirements.txt .
-RUN python -m pip install -r requirements.txt
-
-WORKDIR /app
-ADD . /app
+CMD ["gunicorn", "-b", ":5000", "app:app"]
