--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,44 +1,30 @@
 version: "3.7"
 
 services:
-  client:
-    build:
-      context: ./frontend
-      dockerfile: Dockerfile
-    tty: true
-    ports:
-      - "3000:3000"
-    volumes:
-      - ./frontend:/app
-      - ./frontend/node_modules:/app/node_modules
-
   api:
     build:
-      context: ./backend
-      dockerfile: Dockerfile
-    command: gunicorn --bind 0.0.0.0:5000 setup:app
+      context: .
+      dockerfile: Dockerfile.api
+    image: course-management-hub-api
+  client:
+    build:
+      context: .
+      dockerfile: Dockerfile.client
+    image: course-management-hub-client
     ports:
-      - "5000:5000"
-    environment:
-      MONGODB_HOST: mongodb
-      MONGODB_USERNAME: "apiuser"
-      MONGODB_PASSWORD: "apipassword"
-    volumes:
-      - appdata:/var/www/
-    depends_on:
-      - mongodb
+      - "3000:80"
 
-  mongodb:
-    image: mongo
-    container_name: mongo
-    restart: unless-stopped
-    command: mongod --auth
-    ports:
-      - "27017:27017"
-    environment:
-      MONGO_INITDB_ROOT_USERNAME: "admin"
-      MONGO_INITDB_ROOT_PASSWORD: "password"
-      MONGO_INITDB_DATABASE: webapp
-      MONGODB_DATA_DIR: /data/db
-    volumes:
-      - mongodbdata:/data/db
+  # mongodb:
+  #   image: mongo
+  #   container_name: mongo
+  #   restart: unless-stopped
+  #   command: mongod --auth
+  #   ports:
+  #     - "27017:27017"
+  #   environment:
+  #     MONGO_INITDB_ROOT_USERNAME: "admin"
+  #     MONGO_INITDB_ROOT_PASSWORD: "password"
+  #     MONGO_INITDB_DATABASE: webapp
+  #     MONGODB_DATA_DIR: /data/db
+  #   volumes:
+  #     - mongodbdata:/data/db
