--- a/package.json
+++ b/package.json
@@ -12,13 +12,16 @@
     "react-scripts": "4.0.3",
     "react-router-dom": "^5.2.0",
     "sass": "^1.37.0",
-    "web-vitals": "^1.1.2"
+    "web-vitals": "^1.1.2",
+    "gh-pages": "^3.2.3"
   },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build"
   },
   "eslintConfig": {
     "extends": [
@@ -38,5 +41,6 @@
       "last 1 safari version"
     ]
   },
+  "homepage": "http://phantuanminh.github.io/course-management-hub",
   "proxy": "http://localhost:5000"
 }
