--- a/package.json
+++ b/package.json
@@ -41,6 +41,6 @@
       "last 1 safari version"
     ]
   },
-  "homepage": "http://phantuanminh.github.io/course-management-hub",
+  "homepage": "http://phantuanminh.github.io",
   "proxy": "http://localhost:5000"
 }
