--- a/package.json
+++ b/package.json
@@ -13,9 +13,11 @@
     "react-router-dom": "^5.2.0",
     "sass": "^1.37.0",
     "web-vitals": "^1.1.2",
-    "gh-pages": "^3.2.3"
+    "gh-pages": "^3.2.3",
+    "base-64": "^1.0.0"
   },
   "scripts": {
+    "start-api": "cd api && env/bin/flask run --no-debugger",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
