--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "sass": "^1.37.0",
     "web-vitals": "^1.1.2",
     "gh-pages": "^3.2.3",
-    "base-64": "^1.0.0"
+    "base-64": "^1.0.0",
+    "react-token-auth": "^1.1.8"
   },
   "scripts": {
     "start-api": "cd api && env/bin/flask run --no-debugger",
