--- a/Dockerfile.api
+++ b/Dockerfile.api
@@ -8,4 +8,4 @@ RUN pip install -r ./requirements.txt
 ENV FLASK_ENV production
 
 EXPOSE 5000
-CMD ["gunicorn", "-b", ":5000", "app:app"]
+CMD ["gunicorn", "-b", "0.0.0.0:5000", "app:app"]
