--- a/deployment/nginx.default.conf
+++ b/deployment/nginx.default.conf
@@ -9,7 +9,8 @@ server {
     error_page   500 502 503 504  /50x.html;
 
     location / {
-        try_files $uri $uri/ =404;
+        add_header "Access-Control-Allow-Origin"  *;
+        try_files $uri /index.html$is_args$args =404;
         add_header Cache-Control "no-cache";
     }
 
