--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,10 +6,12 @@ services:
       context: .
       dockerfile: Dockerfile.api
     image: course-management-hub-api
+    ports:
+      - "5000:5000"
   client:
     build:
       context: .
       dockerfile: Dockerfile.client
     image: course-management-hub-client
     ports:
-      - "3000:80"
+      - "3000:3000"
