--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "name": "client",
+  "homepage": "http://phantuanminh.github.io/course-management-hub",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
@@ -43,7 +44,5 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
-  },
-  "homepage": "http://phantuanminh.github.io",
-  "proxy": "http://localhost:5000"
+  }
 }
